WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
129539
Fix srcset related bugs
https://bugs.webkit.org/show_bug.cgi?id=129539
Summary
Fix srcset related bugs
Yoav Weiss
Reported
2014-03-01 02:16:06 PST
Fix srcset related bugs
Attachments
Patch
(14.04 KB, patch)
2014-03-01 02:27 PST
,
Yoav Weiss
no flags
Details
Formatted Diff
Diff
Patch
(14.06 KB, patch)
2014-03-01 02:35 PST
,
Yoav Weiss
no flags
Details
Formatted Diff
Diff
Patch
(13.84 KB, patch)
2014-03-01 14:42 PST
,
Yoav Weiss
no flags
Details
Formatted Diff
Diff
Patch
(13.71 KB, patch)
2014-03-02 06:17 PST
,
Yoav Weiss
no flags
Details
Formatted Diff
Diff
Show Obsolete
(3)
View All
Add attachment
proposed patch, testcase, etc.
Yoav Weiss
Comment 1
2014-03-01 02:27:15 PST
Created
attachment 225547
[details]
Patch
WebKit Commit Bot
Comment 2
2014-03-01 02:28:50 PST
Attachment 225547
[details]
did not pass style-queue: ERROR: LayoutTests/ChangeLog:7: Need whitespace between colon and description [changelog/filechangedescriptionwhitespace] [5] ERROR: LayoutTests/ChangeLog:8: Need whitespace between colon and description [changelog/filechangedescriptionwhitespace] [5] ERROR: Source/WebCore/ChangeLog:6: Line contains tab character. [whitespace/tab] [5] ERROR: Source/WebCore/ChangeLog:9: Line contains tab character. [whitespace/tab] [5] ERROR: Source/WebCore/ChangeLog:10: Line contains tab character. [whitespace/tab] [5] Total errors found: 5 in 9 files If any of these errors are false positives, please file a bug against check-webkit-style.
Yoav Weiss
Comment 3
2014-03-01 02:35:39 PST
Created
attachment 225548
[details]
Patch
Andreas Kling
Comment 4
2014-03-01 14:24:02 PST
Comment on
attachment 225548
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=225548&action=review
r=me!
> Source/WebCore/html/parser/HTMLParserIdioms.cpp:-401 > - for (size_t i = 0; i < imageCandidates.size() - 1; ++i) { > + for (size_t i = 0; i < imageCandidates.size() - 1; ++i) > if (imageCandidates[i].scaleFactor() >= deviceScaleFactor) > return imageCandidates[i]; > - }
WebKit style is to keep the { } braces here since there is more than one line inside the for loop.
Yoav Weiss
Comment 5
2014-03-01 14:42:21 PST
Created
attachment 225570
[details]
Patch
WebKit Commit Bot
Comment 6
2014-03-01 15:23:07 PST
Comment on
attachment 225570
[details]
Patch Clearing flags on attachment: 225570 Committed
r164929
: <
http://trac.webkit.org/changeset/164929
>
WebKit Commit Bot
Comment 7
2014-03-01 15:23:09 PST
All reviewed patches have been landed. Closing bug.
Alexey Proskuryakov
Comment 8
2014-03-01 17:29:20 PST
Two tests are crashing after this change: fast/hidpi/image-srcset-invalid-inputs-except-one.html fast/hidpi/image-srcset-invalid-inputs.html
http://build.webkit.org/results/Apple%20Mavericks%20Debug%20WK2%20(Tests)/r164933%20(3016)/fast/hidpi/image-srcset-invalid-inputs-except-one-crash-log.txt
Alexey Proskuryakov
Comment 9
2014-03-01 19:49:30 PST
I'll roll out for now. Please note that there was a build fix, <
http://trac.webkit.org/changeset/164934
>.
WebKit Commit Bot
Comment 10
2014-03-01 19:50:02 PST
Re-opened since this is blocked by
bug 129570
Yoav Weiss
Comment 11
2014-03-02 06:17:20 PST
Created
attachment 225592
[details]
Patch
Yoav Weiss
Comment 12
2014-03-02 07:55:58 PST
Fixed the ASSERTs. (removed the ASSERT and added an if instead)
WebKit Commit Bot
Comment 13
2014-03-02 14:16:34 PST
Comment on
attachment 225592
[details]
Patch Clearing flags on attachment: 225592 Committed
r164949
: <
http://trac.webkit.org/changeset/164949
>
WebKit Commit Bot
Comment 14
2014-03-02 14:16:37 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug